<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#FBFCFC">

    <Button
        android:id="@+id/button_dissmiss_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="238dp"
        android:background="#0000"
        android:text="Dismiss" />

    <Button
        android:id="@+id/button_add_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="2dp"
        android:text="Add"
        android:background="#0000"/>

    <EditText
        android:id="@+id/editText_mealWeight"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="139dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_mealName"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_add_popup"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="110dp"
        android:layout_toEndOf="@+id/editText2"
        android:padding="15dp"
        android:text="g" />


    <TextView
        android:id="@+id/popup_type_name"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"

        android:padding="15dp"
        android:text="Set name of meal" />

    <TextView
        android:id="@+id/popup_type_weight"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="96dp"
        android:padding="15dp"
        android:text="Set weight of meal" />

</RelativeLayout>