<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#D1F2EB">

    <Button
        android:id="@+id/button_dissmiss_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="238dp"
        android:text="Dismiss" />

    <Button
        android:id="@+id/button_add_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="2dp"
        android:text="Add" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="119dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_add_popup"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@+id/editText2"
        android:padding="15dp"
        android:text="g" />

    <TextView
        android:id="@+id/popup_product_name"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        android:padding="15dp"
        android:text="Nazwa produktu" />

</RelativeLayout>