...
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_toolbar">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

...
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="37dp"
...
